<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/categoryFragment"
        android:icon="@drawable/ic_category"
        android:title="@string/nav_category" />

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/nav_news" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/nav_notification" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
