<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.banquanao.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.example.banquanao.ui.category.CategoryFragment"
        android:label="@string/nav_category"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.example.banquanao.ui.news.NewsFragment"
        android:label="@string/nav_news"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.banquanao.ui.notification.NotificationFragment"
        android:label="@string/nav_notification"
        tools:layout="@layout/fragment_placeholder" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.banquanao.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_placeholder" />

</navigation>
